# Strafunski-Sdf2Haskell

./: Makefile.in  Sdf2Haskell.cabal  Sdf2Haskell.cabal~  Strafunski-Sdf2Haskell.cabal  Strafunski-Sdf2Haskell.cabal~  configure
.svn/: all-wcprops  dir-prop-base  entries
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: Makefile.in
examples/.svn/: all-wcprops  entries
examples/java/: Makefile.in
examples/java/.svn/: all-wcprops  dir-prop-base  entries
examples/littlelambda/: LitteLambda.tbl  Makefile.in
examples/littlelambda/.svn/: all-wcprops  dir-prop-base  entries
examples/twosorts/: Makefile.in
examples/twosorts/.svn/: all-wcprops  dir-prop-base  entries
examples/vs-cobol-ii/: Makefile.in
examples/vs-cobol-ii/.svn/: all-wcprops  dir-prop-base  entries
examples/vs-cobol-ii/testdata/: Makefile.in
examples/vs-cobol-ii/testdata/.svn/: all-wcprops  entries
generator/: Cfg.hs  GPP.hs  ImplodePT.hs  Makefile.in  SGLR.hs  Sdf.def  Sdf.hs  Sdf.hs~  Sdf.tbl  Sdf2Cfg.hs  Sdf2Haskell.hs  Sdf2HaskellUtils.hs  Sdf2Pretty.hs  Sdf2Syntax.hs  SdfLib.hs  SdfMetrics.hs  SdfPP.hs  SyntaxATermConvertibleInstances.hs
generator/.svn/: all-wcprops  dir-prop-base  entries
scripts/: Makefile.in
scripts/.svn/: all-wcprops  entries
